despliegues/Ejemplo1-namespaces.yaml
kind: Namespace
apiVersion: v1  # nombreLibreria/version

metadata:
    name: prueba
