despliegues/Ejemplo8-wordpress-admin.yaml
---
#Namespace:     web
kind:           Namespace
apiVersion:     v1
metadata:       
    name:       web
