despliegues/Ejemplo11-wordpress-desa-limites.yaml
kind:           Deployment
apiVersion:     apps/v1

metadata:
    name:       wordpress

spec:
    replicas: 1
    
    selector:
        matchLabels:
            app: wordpress
            
    template:
        metadata:
            name:       wordpress-template
            labels:
                app:    wordpress
        
        spec:
            containers:
                - name:         wordpress
                  image:        wordpress:latest
                  ports:
                    - containerPort: 80
                  volumeMounts:
                    - name:         datos
                      mountPath:    /var/www/html
                  resources:
                    requests:   # 
                        cpu: 500m
                        memory: 500Mi
                    limits:
                        cpu: 1
                        memory: 1000Mi
            volumes:
                - name:             datos
                  persistentVolumeClaim:
                    claimName:      peticion-volumen-wordpress
