despliegues/Ejemplo4-pod-avanzado.yaml
kind: Pod
apiVersion: v1

metadata:
    name: multi-pod # Identificador

spec:
    volumes:
        - # Volumen 1
            name: volumen1
            #emptyDir: {} # El valor es un MAPA vacio
            emptyDir: 
                medium: Memory
            
        #- # Volumen 2
        #    name: volumen2

    containers:
        - # Contenedor de FEDORA
            name: fedora
            image: fedora:latest
            command:
                - sh
                - -c
                - sleep 3600;
            volumeMounts:
                - name: volumen1
                  mountPath: /datosFedora
        - # Contenedor de UBUNTU
            name: ubuntu
            image: ubuntu:latest
            command:
                - sh
                - -c
                - sleep 3600;
            volumeMounts:
                - name: volumen1
                  mountPath: /datosUbuntu
        
        - # Contenedor de NGINX
            name: nginx
            image: nginx:latest
