despliegues/Ejemplo6-deployment-mariadb.yaml

kind: Deployment
apiVersion: apps/v1

metadata:
    name: mariadb-deployment
    
spec:
    replicas: 1
    
    selector:
        matchLabels:
            app: mariadb
    
    template:
        metadata:
            name: mariadb-pod-template
            labels:
                app: mariadb
        spec:
            containers:
                - name: mariadb
                  image: mariadb:latest
                  ports:
                    - containerPort: 3306
                  volumeMounts:
                    - name: datos
                      mountPath: /var/lib/mysql
            volumes:
                - name: datos
                  persistentVolumeClaim:
                    claimName: peticion-volumen-mariadb
