despliegues/Ejemplo9-configmaps.yaml

kind:               Pod
apiVersion:         v1

metadata:
    name:           configmaps

spec:
    volumes:
        - name: volumen1
          # De donde lo saco   <<<< Puede estar en un claim <> pv
          # emptyDir: {}
          # hostPath:
          configMap:
            name: ficheros
            # De forma opcional
            items:
                - key: certificado
                  path: fichero-certificado.json
    containers:
        - name:     contenedor
          image:    nginx:latest
        - name:     contenedor2
          image:    ubuntu:latest
          command:
            - sh
            - -c
            - sleep 3600;
          env:                      #### Este tiene prioridad sobre el envFrom
            - name: VARIABLE1
              value: VALOR_FIJO
            - name: CLAVE1
              value: Nuevo valor 
          volumeMounts:
            - name: volumen1
              mountPath: /datos
---
