despliegues/Ejemplo5-pod-mariadb.yaml
#namespace
kind: Namespace
apiVersion: v1

metadata:
    name: basedatos

---

#pod 
kind: Pod
apiVersion: v1

metadata:
    name: mariadb-pod
    labels:
        app: mariadb
spec:
    containers:
        - name: mariadb
          image: mariadb:latest
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: datos
              mountPath: /var/lib/mysql
    volumes:
        - name: datos
          persistentVolumeClaim:
            claimName: peticion-volumen-mariadb
        
---
#servicio
kind: Service
apiVersion: v1

metadata:
    name: mariadb-svc

spec:
    ports:
        - port: 3306
          targetPort: 3306
    selector:
        app: mariadb
