despliegues/Ejemplo7-deployment-nginx.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
    name: nginx-deployment

spec:
    replicas: 6
    selector:
        matchLabels:
            app: nginx
    template:
        metadata:
            name: nginx-pod-template
            labels:
                app: nginx
        spec:
            volumes:
                - name: la-web
                  emptyDir: {}
            containers:
                # Todos los contenedores definidos dentro de un pod se ejecutan en paralelo
                # Puedo ejecutar: servicios y daemons
                - name: nginx
                  image: nginx:latest
                  volumeMounts:
                    - name: la-web
                      mountPath: /usr/share/nginx/html
                  ports:
                    - containerPort: 80
---
kind: Service
apiVersion: v1

metadata:
    name: nginx # Nombre DNS - IP Propia del BC

spec:
    ports:
        - # La definicion de mapeos de puertos 
            targetPort: 80 # La IP del POD
            port: 8080     # IP DEL BALANCEADOR
    selector:
        app: nginx # Balanceador
