despliegues/Ejemplo8-wordpress-desa.yaml


#Service:       MariaDB    ClusterIP : 3306
kind:           Service
apiVersion:     v1

metadata:
    name:       mariadb # Nombre DNS - IP Propia del BC

spec:
    type:       ClusterIP # Por defecto
    ports:
        - # La definicion de mapeos de puertos 
            targetPort: 3306 # La IP del POD
            port:       3306     # IP DEL BALANCEADOR
    selector:
        app:    mariadb # Balanceador
---


#               Wordpress  NodePort  : 30080:80  *****
kind:           Service
apiVersion:     v1

metadata:
    name:       wordpress # Nombre DNS - IP Propia del BC

spec:
    type:       NodePort # Por defecto
    ports:
        - # La definicion de mapeos de puertos 
            targetPort: 80     # La IP del POD
            port:       80     # IP DEL BALANCEADOR
            nodePort:   30080
    selector:
        app:    wordpress # Balanceador
---


#Deployment:    Wordpress
kind:           Deployment
apiVersion:     apps/v1

metadata:
    name:       wordpress

spec:
    replicas: 1
    
    selector:
        matchLabels:
            app: wordpress
            
    template:
        metadata:
            name:       wordpress-template
            labels:
                app:    wordpress
        
        spec:
            containers:
                - name:         wordpress
                  image:        wordpress:latest
                  ports:
                    - containerPort: 80
                  volumeMounts:
                    - name:         datos
                      mountPath:    /var/www/html
            volumes:
                - name:             datos
                  persistentVolumeClaim:
                    claimName:      peticion-volumen-wordpress
---


#StatefulSet:   Mariadb                          ***** Deployment
kind:           StatefulSet
apiVersion:     apps/v1

metadata:
    name:       mariadb

spec:
    serviceName: mariadb
    
    replicas: 1
    
    selector:
        matchLabels:
            app: mariadb
    
    template:
        metadata:
            name:       mariadb-template
            labels:
                app:    mariadb
        
        spec:
            containers:
                - name:         mariadb
                  image:        mariadb:latest
                  ports:
                    - containerPort: 3306
                  volumeMounts:
                    - name:         peticion-volumen-bbdd-wordpress #datos
                      mountPath:    /var/lib/mysql
#            volumes:
#                - name:             datos
#                  persistentVolumeClaim:
#                    claimName:      peticion-volumen-bbdd-wordpress
    volumeClaimTemplates:
        - metadata:
             name: peticion-volumen-bbdd-wordpress
        
          spec:
            resources:
                requests:
                    storage: 1Gi
            accessModes:
                - ReadWriteMany # Un volumen que se puede entregar a muchos pods
            storageClassName: redundante
